--- a/AmazonAutomation/AmazonTests/AmazonTests.csproj
+++ b/AmazonAutomation/AmazonTests/AmazonTests.csproj
@@ -58,6 +58,7 @@
   <ItemGroup>
     <Compile Include="LoginTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SearchTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
