--- a/AmazonAutomation/AmazonTests/AmazonTests.csproj
+++ b/AmazonAutomation/AmazonTests/AmazonTests.csproj
@@ -59,6 +59,7 @@
     <Compile Include="LoginTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SearchTests.cs" />
+    <Compile Include="CartTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
