--- a/AmazonAutomation/AmazonTests/AmazonTests.csproj
+++ b/AmazonAutomation/AmazonTests/AmazonTests.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SearchTests.cs" />
     <Compile Include="CartTests.cs" />
+    <Compile Include="QuantityTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
